export class Categoria {
    nombre;
    costo;
    multiplicador;
}