export class Materia {
    nombre;
    estado;
    nota;
}